--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "sorting",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.1.2",
